--- a/static/home.css
+++ b/static/home.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: black;
   }
   
   header {
     position: relative;
     width: 100%;
-    height: 300px; /* Adjust the height as needed */
     overflow: hidden;
   }
   
@@ -42,10 +42,12 @@ body {
     text-decoration: none;
     font-size: large;
     font-style: italic;
+    z-index: -1;
   }
   
-  nav ul li a:hover {
+  nav ul li a:hover{
     color: #575757;
+    cursor: pointer;
   }
   
   .pav {
@@ -162,4 +164,166 @@ body {
   
   a.next {
     right: 0px;
+  }
+
+  .content {
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .section {
+    margin: 40px;
+    padding: 40px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.1);
+    width: 300px;
+  }
+  
+  .section h2 {
+    margin-top: 0;
+    color: #ddd;
+  }
+  
+  .item {
+    margin: 10px 0;
+    padding: 10px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 4px;
+  }
+  
+  .view-all {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+  }
+  
+  .view-all:hover {
+    background-color: #0056b3;
+  }
+  
+  .content {
+    z-index: 1;
+    text-align: center;
+  }
+  
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 1;
+  }
+  
+  .bubble {
+    position: absolute;
+    bottom: -100px;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(246, 246, 246, 0.86);
+    border-radius: 50%;
+    animation: rise 6s infinite ease-in-out;
+  }
+  
+  .bubble:nth-child(1) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-duration: 5s;
+    animation-delay: 1s;
+  }
+  
+  .bubble:nth-child(2) {
+    left: 20%;
+    width: 30px;
+    height: 30px;
+    animation-duration: 6s;
+    animation-delay: 2s;
+  }
+  
+  .bubble:nth-child(3) {
+    left: 30%;
+    width: 40px;
+    height: 40px;
+    animation-duration: 7s;
+    animation-delay: 0s;
+  }
+  
+  .bubble:nth-child(4) {
+    left: 40%;
+    width: 35px;
+    height: 35px;
+    animation-duration: 6s;
+    animation-delay: 1.5s;
+  }
+  
+  .bubble:nth-child(5) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-duration: 5s;
+    animation-delay: 3s;
+  }
+  
+  .bubble:nth-child(6) {
+    left: 60%;
+    width: 30px;
+    height: 30px;
+    animation-duration: 6s;
+    animation-delay: 0.5s;
+  }
+  
+  .bubble:nth-child(7) {
+    left: 70%;
+    width: 45px;
+    height: 45px;
+    animation-duration: 7s;
+    animation-delay: 2.5s;
+  }
+  
+  .bubble:nth-child(8) {
+    left: 80%;
+    width: 30px;
+    height: 30px;
+    animation-duration: 6s;
+    animation-delay: 1s;
+  }
+  
+  .bubble:nth-child(9) {
+    left: 90%;
+    width: 20px;
+    height: 20px;
+    animation-duration: 5s;
+    animation-delay: 2s;
+  }
+  
+  .bubble:nth-child(10) {
+    left: 100%;
+    width: 35px;
+    height: 35px;
+    animation-duration: 6s;
+    animation-delay: 0s;
+  }
+  
+  @keyframes rise {
+    0% {
+      transform: translateY(0) scale(1);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(-800px) scale(0.5);
+      opacity: 0;
+    }
   }
